--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "admin-lte": "^3.2.0",
+        "alpinejs": "^3.13.0"
     }
 }
