--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "mpdf/mpdf": "^6.1",
         "realrashid/sweet-alert": "^7.1"
     },
     "require-dev": {
