--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/telescope": "^4.16",
         "laravel/tinker": "^2.8",
         "mpdf/mpdf": "^6.1",
-        "realrashid/sweet-alert": "^7.1"
+        "realrashid/sweet-alert": "^7.1",
+        "spatie/laravel-permission": "^5.10",
+        "staudenmeir/eloquent-has-many-deep": "^1.18"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
