--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 /.phpunit.cache
+/bootstrap/ssr
 /node_modules
 /public/build
 /public/hot
+/public/storage
+/storage/*.key
+/vendor
 .env
 .env.backup
 .env.production
